# finnish-media-scrapers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HSScraper.ipynb  LICENSE  README.md  convert-hs-to-text.py  convert-il-to-text.py  convert-is-to-text.py  convert-to-text-hs.py  convert-to-text-yle.py  convert-yle-to-text.py  environment.yml  extractTextsKed.py  fetch-hs.py  fetch-kansanedustajat-articles.py  kansanedustajat.txt  kedustajat-expanded.csv  paper.bib  paper.md  post-filter.py  pyproject.toml  query-hs.py  query-is.py  query-kansanedustajat.py  query-yle.py  scrape-hs.py  scrape-il.py  scrape-is.py  scrape-yle.py  setup.cfg  setup.py
.github/workflows/: publish-releases-to-pypi.yml
docs/: conf.py  finnish_media_scrapers.rst  finnish_media_scrapers.scripts.rst  index.rst  modules.rst
example-outputs/: example-il.html  example-il.txt
finnish_media_scrapers/: __init__.py  fetch.py  htmltotext.py  query.py
finnish_media_scrapers/scripts/: fetch_al.py  fetch_hs.py  fetch_open.py  fetch_sk.py  htmltotext_al.py  htmltotext_hs.py  htmltotext_il.py  htmltotext_is.py  htmltotext_sk.py  htmltotext_svyle.py  htmltotext_yle.py  login_hs.py  post_filter.py  query_al.py  query_hs.py  query_il.py  query_is.py  query_sk.py  query_yle.py
members_of_parliament/: README.md  fetch-mp-inflections.py  mp-expanded-orpo.csv  mp-expanded.csv  query-mp-inflections.py
old/: convert-hs-to-text.py  convert-il-to-text.py  convert-is-to-text.py  convert-yle-to-text.py  convert-ylesv-to-text.py  fetch-hs.py
old/utils/: HtmlToText.py
package/: LICENSE  README.md  setup.cfg  test.py
package/src/finnishmediascrapers/: __init__.py  convert-hs-to-text.py  convert-il-to-text.py  convert-is-to-text.py  convert-yle-to-text.py  convert-ylesv-to-text.py  fetch-open.py  query-hs.py  query-il.py  query-yle.py
package/src/finnishmediascrapers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/src/finnishmediascrapers_hsci.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/finnish_media_scrapers/: fetch.py
src/finnish_media_scrapers/scripts/: post_filter.py  query_hs.py  query_is.py
tests/: test_parsing.py
tests/example_articles/hs/: 2000006466966-sanitized.html  2000006466966-sanitized.txt  2000006560604-sanitized.html  2000006560604-sanitized.txt  2000006585357-sanitized.html  2000006585357-sanitized.txt
tests/example_articles/il/: 52ae7095-adf3-4430-a603-3bebff5f79f2-sanitized.html  52ae7095-adf3-4430-a603-3bebff5f79f2-sanitized.txt
tests/example_articles/is/: 2000006365914-sanitized.html  2000006365914-sanitized.txt  2000006436350-sanitized.html  2000006436350-sanitized.txt  2000006456837-sanitized.html  2000006456837-sanitized.txt  2000006562357-sanitized.html  2000006562357-sanitized.txt  2000007693397-sanitized.html  2000007693397-sanitized.txt
tests/example_articles/svyle/: 7-1456870-sanitized.html  7-1456870-sanitized.txt
tests/example_articles/yle/: 3-11173365-sanitized.html  3-11173365-sanitized.txt  3-11222287-sanitized.html  3-11222287-sanitized.txt  3-11609882-sanitized.html  3-11609882-sanitized.txt
utils/: HtmlToText.py
