[metadata]
name = finnish_media_scrapers
version = 0.0.1
author = Human Sciences - Computing Interaction Research Group
author_email = eetu.makela@helsinki.fi
description = Scrapers for extracting articles from Finnish journalistic media websites.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hsci-r/finnish_media_scrapers
project_urls =
    Bug Tracker = https://github.com/hsci-r/finnish_media_scrapers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



